Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9176

Crash when changing build configuration

XMLWordPrintable

      • ConfA includes the currently open file in its Sources section
      • ConfB includes the same file in its Headers section (instead of Sources)

      Switching build configuration from ConfA to ConfB crashes with the following trace. m_explorer->d->m_currentNode seems to be invalid (all addresses start with 0x22 while currentNode starts with 0x87)...

      0	QMetaObject::cast	qmetaobject.cpp	274	0x671f8307	
      1	qobject_cast<ProjectExplorer::FileNode *>	qobject.h	381	0x26d22ae	
      2	ProjectExplorer::Internal::ProjectTreeWidget::filesAboutToBeRemoved	projecttreewidget.cpp	240	0x27c088a	
      3	ProjectExplorer::Internal::ProjectTreeWidget::qt_static_metacall	moc_projecttreewidget.cpp	94	0x28b927f	
      4	QMetaObject::activate	qobject.cpp	3547	0x67210c44	
      5	ProjectExplorer::NodesWatcher::filesAboutToBeRemoved	moc_projectnodes.cpp	587	0x28ba631	
      6	ProjectExplorer::ProjectNode::removeFileNodes	projectnodes.cpp	664	0x27ce02c	
      7	Qt4ProjectManager::Internal::InternalNode::updateFiles	qt4nodes.cpp	529	0x577613e	
      8	Qt4ProjectManager::Internal::InternalNode::updateSubFolders	qt4nodes.cpp	403	0x57747b6	
      9	Qt4ProjectManager::Internal::InternalNode::updateSubFolders	qt4nodes.cpp	485	0x577532b	
      10	Qt4ProjectManager::Internal::InternalNode::updateSubFolders	qt4nodes.cpp	485	0x577532b	
      11	Qt4ProjectManager::Internal::InternalNode::updateSubFolders	qt4nodes.cpp	485	0x577532b	
      12	Qt4ProjectManager::Internal::InternalNode::updateSubFolders	qt4nodes.cpp	485	0x577532b	
      13	Qt4ProjectManager::Qt4PriFileNode::update	qt4nodes.cpp	702	0x575dcda	
      14	Qt4ProjectManager::Qt4ProFileNode::applyEvaluate	qt4nodes.cpp	1862	0x57692e8	
      15	Qt4ProjectManager::Qt4ProFileNode::applyAsyncEvaluate	qt4nodes.cpp	1604	0x57664b0	
      16	Qt4ProjectManager::Qt4ProFileNode::qt_static_metacall	moc_qt4nodes.cpp	308	0x5822c85	
      17	QMetaObject::activate	qobject.cpp	3547	0x67210c44	
      18	QFutureWatcherBase::finished	moc_qfuturewatcher.cpp	141	0x67288c39	
      19	QFutureWatcherBasePrivate::sendCallOutEvent	qfuturewatcher.cpp	440	0x6704fd4d	
      20	QFutureWatcherBase::event	qfuturewatcher.cpp	346	0x6704f9a6	
      21	QApplicationPrivate::notify_helper	qapplication.cpp	4557	0x65076fae	
      22	QApplication::notify	qapplication.cpp	3939	0x65074c27	
      23	QCoreApplication::notifyInternal	qcoreapplication.cpp	915	0x671ee121	
      24	QCoreApplication::sendEvent	qcoreapplication.h	231	0x671f35c9	
      25	QCoreApplicationPrivate::sendPostedEvents	qcoreapplication.cpp	1539	0x671eef7b	
      26	qt_internal_proc	qeventdispatcher_win.cpp	496	0x67235dba	
      27	InternalCallWinProc	USER32		0x7e418734	
      28	UserCallWinProcCheckWow	USER32		0x7e418816	
      29	DispatchMessageWorker	USER32		0x7e4189cd	
      30	DispatchMessageW	USER32		0x7e418a10	
      31	QEventDispatcherWin32::processEvents	qeventdispatcher_win.cpp	810	0x67236dd6	
      32	QGuiEventDispatcherWin32::processEvents	qapplication_win.cpp	1204	0x6512e92e	
      33	QEventLoop::processEvents	qeventloop.cpp	150	0x671eb5ee	
      34	QEventLoop::exec	qeventloop.cpp	204	0x671eb776	
      35	QCoreApplication::exec	qcoreapplication.cpp	1187	0x671ee65d	
      36	QApplication::exec	qapplication.cpp	3819	0x65074958	
      37	main	main.cpp	517	0x4072ce	
      38	__tmainCRTStartup	crtexe.c	555	0x40d4cf	
      39	mainCRTStartup	crtexe.c	371	0x40d2ff	
      40	BaseProcessStart	kernel32		0x7c81776f	

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes