ProjectModels: Fix crash on changing the tree in particular ways

The crash is due to the project model figuring out a safe node to be the
current node, setting that. But then the DocumentManager synchronizes
the current node with the editor, thus setting the current node back.

Task-number: QTCREATORBUG-9176
Change-Id: Ia516a770dbbfd16d224fa030a8c3d1b3a40f83cd
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Daniel Teske <daniel.teske@digia.com>